fix: add NoSuchElementException for startTimeList, replace Arrays.asList to List.of